 Revision history for Log::Log4perl
##################################################

0.48 (not yet released)
    * (ms) fixed bug reported by Chip Salzenberg <chip@pobox.com>: logdie()
           and logwarn() are now compliant with the warn() and die() 
           standard which suppresses the "at file line x" message if
           the message ends with a "\n".

0.47 (07/11/2004)
    * (ms) Added suggestion by Hutton Davidson <Davidson.Hutton@ftid.com>
           to make the socket appender more forgiving. New option
           "silent_recovery" will silently ignore errors and recover
           if possible on initiallly dead socket connections.
    * (ms) Fixed bug with initialized() -- checking once caused
           subsequent calls to return true.
    * (ms) run t/045Composite.t only if Storable is installed -- earlier
           perl versions (like 5.6.1) don't have it by default.
    * (ms) fixed test case in t/020Easy.t for buggy perl 5.6.1
    * (ms) added Log::Log4perl::infiltrate_lwp() to make LWP::UserAgent 
           play in the L4p framework upon request.
    * (ms) perl 5.00503 mysteriously core dumps in t/017Watch.t, seems like 
           this was introduced in 0.46. Disabled these tests for now
           if we're on 5.00503 to avoid installation hickups. Longer term,
           need to investigate.

0.46 (06/13/2004)
    * (ms) removed superfluous eval() in Log4perl.pm, reported anonymously
           on the CPAN bugtracker.
    * (ms) Added a cleanup() function to Logger.pm which is used by an
           END {} block in Logger.pm to tear down all Loggers/Appenders
           before global destruction kicks in. In addition, Kevin found 
           that the eval "" is the cause of an Appender memleak. Moved
           assignment variable out of the eval to plug the leak.
           Added $Log::Log4perl::CHATTY_DESTROY_METHODS, which shows 
           what L4p objects are destroyed and when.