@@ -1,5 +1,5 @@
 ######################################################################
-    Log::Log4perl 0.47
+    Log::Log4perl 0.48_01
 ######################################################################
 
 NAME
