@@ -272,7 +272,8 @@ sub generate_coderef {
           \$appender->log(
               #these get passed through to Log::Dispatch
               { name    => \$appender_name,
-                level   => \$Log::Log4perl::Level::L4P_TO_LD{\$level},   
+                level   => \$Log::Log4perl::Level::L4P_TO_LD{
+                               \$level},   
                 message => \$message,
               },
               #these we need
